--- a/admin_page.html
+++ b/admin_page.html
@@ -1,6 +1,6 @@
-        <!doctype html>
-        <html lang="en">
-        <head>
+<!doctype html>
+<html lang="en">
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,56 +18,71 @@
     <!-- Our JavaScript Exception handler-->
     <script src="javascript/exception_handler.js"></script>
     <script src="javascript/global_functions.js"></script>
+
     <!-- Our JavaScript -->
-        <script src="javascript/login_page.js"></script>
-        <script src="javascript/admin_page.js"></script>
-        <!-- Modified Bootstrap CSS -->
-        <link rel="stylesheet" href="css/login.css">
-        <title>Administrator Page</title>
-                <nav class="navbar navbar-light fixed-top bg-dark highest1">
-            <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollNavigation()">
-                <span class="navbar-toggler-icon"> </span>
-            </button>
-            <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
-            <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
-            <a href="all_events.html" class="nav-link text-warning">All Events</a>
+    <script src="javascript/login_page.js"></script>
+    <script src="javascript/admin_page.js"></script>
+    <!-- Modified Bootstrap CSS -->
+    <link rel="stylesheet" href="css/login.css">
+    <title>Administrator Page</title>
+    <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
+</head>
 
-            <div>
-                <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
-                <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
-            </div>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link text-white" href="events_february_xxi.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
-                    <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
-                    <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
-                </div>
-            </div>
-        </nav>
+<!-- NAVIGATION -->
 
+<nav class="navbar navbar-light fixed-top bg-dark highest1">
+    <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
+        <span class="navbar-toggler-icon"> </span>
+    </button>
+    <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
+    <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
+    <a href="all_events.html" class="nav-link text-warning">All Events</a>
 
-
-        </head>
-        <body>
-        <div class="container" style="margin-top: 100px; margin-bottom: 20px;">
-            <p>Pregenerovanie <code-forum class="bbCodeInlineWhiteBg">buildings.json</code-forum> súboru. Ak sú
-            vo filtri začlenené budovy ktoré už sú uložené, aktualizuje ich, ak nie, pridá nové.</p>
-
-
-                <input class="form-control-file" type="file" id="myFile" name="filename">
-                <input  class="form-control" id="filter" placeholder="Filter by substring of id">
-                <input  class="form-control" id="exclude" placeholder="Exclude by substring of id (delimiter is ,)">
-                <input  class="form-control_number" id="numOfChapters" placeholder="CHs" value="17">
-                <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="handleBuildingsJSON()">GENERATE</button>
-
+    <div>
+        <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
+        <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link text-white" href="carnival2021.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
+            <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
+            <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
         </div>
-        <div class="container" style="margin-bottom: 20px;">
-            <p>Vygenerovanie prázdneho jsonu s kľúčmi ako IDčka všetkých budov. (mal by sa neskor dat implementovat aj filter)</p>
+    </div>
+</nav>
+
+<body>
+
+<!-- EXCEPTION HANDLER -->
+
+<div id="alert" class="alert alert-success alert-dismissible fade show fixed-top d-none" role="alert" >
+    <span id="text">Holy guacamole! </span>
+    <button type="button" class="close" id="close" onclick="close_alert()" >
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+<div class="container" style="margin-top: 100px; margin-bottom: 20px;">
+    <p>Admin page, stránka predovšetkým obsahuje rôzne tooly na vytváranie obsahu na stránku.</p>
+    <br>
+    <p>Pregenerovanie <code-forum class="bbCodeInlineWhiteBg">buildings.json</code-forum> súboru. Ak sú
+    vo filtri začlenené budovy ktoré už sú uložené, aktualizuje ich, ak nie, pridá nové.</p>
 
 
-            <input class="form-control-file" type="file" id="buildings_file" name="filename">
-            <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateJSONBuildingsIDs()">GENERATE</button>
+        <input class="form-control-file" type="file" id="myFile" name="filename">
+        <input  class="form-control" id="filter" placeholder="Filter by substring of id">
+        <input  class="form-control" id="exclude" placeholder="Exclude by substring of id (delimiter is ,)">
+        <input  class="form-control_number" id="numOfChapters" placeholder="CHs" value="17">
+        <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="handleBuildingsJSON()">GENERATE</button>
 
-        </div>
-        </body>
-        </html>
+</div>
+<div class="container" style="margin-bottom: 20px;">
+    <p>Vygenerovanie prázdneho jsonu s kľúčmi ako IDčka všetkých budov. (mal by sa neskor dat implementovat aj filter)</p>
+
+
+    <input class="form-control-file" type="file" id="buildings_file" name="filename">
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateJSONBuildingsIDs()">GENERATE</button>
+
+</div>
+</body>
+</html>
