--- a/all_buildings.html
+++ b/all_buildings.html
@@ -1,63 +1,65 @@
-    <!doctype html>
-    <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="bootstrap-4.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-              crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap-4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="javascript/jquery-3.5.1.min.js"></script>
-        <script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="javascript/jquery-3.5.1.min.js"></script>
+    <script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
 
-        <!-- Our JavaScript Exception handler-->
-        <script src="javascript/exception_handler.js"></script>
-        <script src="javascript/global_functions.js"></script>
-        <!-- Our JavaScript -->
-        <script src="javascript/log_out.js"></script>
-        <script src="javascript/all_buildings.js"></script>
-        <!--<script  src="javascript/config.js"></script>-->
-        <!-- Modified Bootstrap CSS -->
-        <link rel="stylesheet" href="css/config.css">
-        <title>All Buildings</title>
-        <nav class="navbar navbar-light fixed-top bg-dark highest1">
-            <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollNavigation()">
-                <span class="navbar-toggler-icon"> </span>
-            </button>
-            <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
-            <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
-            <a href="all_events.html" class="nav-link text-warning">All Events</a>
+    <!-- Our JavaScript Exception handler-->
+    <script src="javascript/exception_handler.js"></script>
+    <script src="javascript/global_functions.js"></script>
 
-            <div>
-                <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
-                <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
-            </div>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link text-white" href="events_february_xxi.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
-                    <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
-                    <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
-                </div>
-            </div>
-        </nav>
+    <!-- Our JavaScript -->
+    <script src="javascript/all_buildings.js"></script>
+    <!--<script  src="javascript/config.js"></script>-->
+    <!-- Modified Bootstrap CSS -->
+    <link rel="stylesheet" href="css/config.css">
+    <title>All Buildings</title>
+    <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
+    <!-- NAVIGATION -->
 
-
-    </head>
-    <body onload="readBuildingsJSON()">
-    <div id="alert" class="alert alert-success alert-dismissible fade show fixed-top d-none" role="alert" >
-        <span id="text">Holy guacamole! </span>
-        <button type="button" class="close" id="close" onclick="close_alert()" >
-            <span aria-hidden="true">&times;</span>
+    <nav class="navbar navbar-light fixed-top bg-dark highest1">
+        <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
+            <span class="navbar-toggler-icon"> </span>
         </button>
-    </div>
+        <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
+        <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
+        <a href="all_events.html" class="nav-link text-warning">All Events</a>
 
+        <div>
+            <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
+            <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link text-white" href="carnival2021.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
+                <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
+                <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
+            </div>
+        </div>
+    </nav>
+</head>
+<body onload="readBuildingsJSON()">
 
+<!-- EXCEPTION HANDLER -->
+
+<div id="alert" class="alert alert-success alert-dismissible fade show fixed-top d-none" role="alert" >
+    <span id="text">Holy guacamole! </span>
+    <button type="button" class="close" id="close" onclick="close_alert()" >
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 <div style="padding-top: 59px;">
     <div style="width: 100%;">
@@ -65,58 +67,69 @@
             <div class="row">
                 <div class="col-sm">
                     <label for="input_event">Select event:</label>
-                    <select id="input_event" class="form-select form-select-sm" aria-label=".form-select-sm example" onchange="">
-                        <option value="all_events" style="background-color: #ecdec0;">All</option>
-                        <option value="march_xxi_">Easter 2021</option>
-                        <option value="february_xxi_">Elvarian Carnival 2021</option>
-                        <option value="december_xx_">Winter Magic - The Snow Owl 2020</option>
-                        <option value="october_xx_">Misty Forest - Halloween 2020</option>
-                        <option value="september_xx_">Autumn Zodiac 2020</option>
-                        <option value="july_xx_">Sorcerers' Pilgrimage 2020</option>
-                        <option value="june_xx_">The Air Traders' Voyage 2020</option>
-                        <option value="may_xx_">May Celebrations 2020</option>
-                        <option value="easter_xx_">Gathering of the Phoenix Cults 2020</option>
-                        <option value="car_xx_">Elvarian Carnival 2020</option>
-                        <option value="winter_xix_">Winter Magic 2019</option>
-                        <option value="halloween_xix">Dr. Freakenspleen 2019</option>
-                        <option value="autumn_xix_">Autumn Zodiac 2019</option>
-                        <option value="mm_xix_">Summer Mermaids 2019</option>
-                        <option value="queenoffish">The Queen of the Seas 2019</option>
-                        <option value="summer_xix_">Summer Solstice 2019</option>
+                    <select id="input_event" class="custom-select" style="width: 50%; margin-bottom: 10px;"  onchange="">
+                        <option value="all_events">All</option>
+                        <optgroup label="2021">
+                            <option value="march_xxi_">Easter</option>
+                            <option value="february_xxi_">Elvarian Carnival</option>
+                        </optgroup>
+                        <optgroup label="2020">
+                            <option value="december_xx_">Winter Magic - The Snow Owl</option>
+                            <option value="october_xx_">The Mistery of the Misty Forest</option>
+                            <option value="september_xx_">Autumn Zodiac</option>
+                            <option value="july_xx_">Sorcerers' Pilgrimage</option>
+                            <option value="june_xx_">The Air Traders' Voyage</option>
+                            <option value="may_xx_">May Celebrations</option>
+                            <option value="easter_xx_">Gathering of the Phoenix Cults</option>
+                            <option value="car_xx_">Elvarian Carnival</option>
+                        </optgroup>
+                        <optgroup label="2019">
+                            <option value="winter_xix_">Winter Magic</option>
+                            <option value="halloween_xix">Dr. Freakenspleen</option>
+                            <option value="autumn_xix_">Autumn Zodiac</option>
+                            <option value="mm_xix_">Summer Mermaids</option>
+                            <option value="queenoffish">The Queen of the Seas</option>
+                            <option value="summer_xix_">Summer Solstice</option>
+                        </optgroup>
+                        <option value="summer_xix_">Older</option>
                     </select>
+                    <input hidden type="checkbox" id="includeAppearances" name="" value="">
                 </div>
                 <div class="col-sm">
-                    <label for="input_production">Select production:</label>
-                    <select id="input_production" class="form-select form-select-sm" aria-label=".form-select-sm example" onchange="">
+                    <center><label for="input_production">Select production:</label>
+                    <select id="input_production" class="custom-select" style="width: 50%; margin-bottom: 10px;" onchange="">
                         <option value="all_events">All</option>
                         <option value="only,providedCulture">Culture Only</option>
                         <option value="only,providedCulture,provided_population">Culture & Population Only</option>
                         <option value="orcs">Orcs</option>
                         <option value="mana">Mana</option>
                         <option value="seeds">Seeds</option>
-                    </select>
+                    </select></center>
                 </div>
                 <div class="col-sm">
-                    <label for="input_orderBy">Order By:</label>
-                    <select id="input_orderBy" class="form-select form-select-sm" aria-label=".form-select-sm example" onchange="">
-                        <option value="all_events">All</option>
-                        <option value="only,providedCulture">Culture Only</option>
-                        <option value="only,providedCulture,provided_population">Culture & Population Only</option>
-                        <option value="orcs">Orcs</option>
-                        <option value="mana">Mana</option>
-                        <option value="seeds">Seeds</option>
+                    <center><label for="input_orderBy">Order By:</label>
+                    <select id="input_orderBy" class="custom-select" style="width: 50%; margin-bottom: 10px;" onchange="">
+                        <option value="all_events">Coming Soon</option>
                     </select>
+                    </center>
                 </div>
             </div>
             <div class="row center">
                 <div class="col-sm" style="margin-left: 10px; margin-right: 10px; width: 20%;">
-
+                    <label for="input_placeholder">Filter soon:</label>
+                    <select id="input_placeholder" class="custom-select" style="width: 50%;" onchange="">
+                        <option value="all_events">Coming Soon</option>
+                    </select>
                 </div>
                 <div class="col-sm" style="margin-left: 10px; margin-right: 10px; width: 60%;">
-                    <button class="btn btn-sm btn-success btn-block text-uppercase"  onclick="readBuildingsJSON()">Filter & Generate</button>
+                    <button class="btn btn-sm btn-success btn-block text-uppercase" style="margin-top: 10px;" onclick="readBuildingsJSON()">Filter & Generate</button>
                 </div>
                 <div class="col-sm" style="margin-left: 10px; margin-right: 10px; width: 20%;">
-
+                    <center><label for="input_placeholder">Filter soon:</label>
+                    <select id="input_placeholder" class="custom-select" style="width: 50%;" onchange="">
+                        <option value="all_events">Coming Soon</option>
+                    </select>
+                    </center>
                 </div>
             </div>
         </div>
@@ -134,3 +147,5 @@
         </div>
     </div>
 </div>
+
+</body>
