--- a/all_events.html
+++ b/all_events.html
@@ -1,29 +1,79 @@
-<?php
-session_start();?>
-    <!doctype html>
-    <html lang="en">
-    <?php
-    $page = 'log_in';
-    include('html_head_component.php');
-    include('html_nav_component.php');
-    ?>
-    <body>
-    <?php
-    include('exception_handler.php');
-    ?>
-    <div class="container" style="margin-top: 100px">
-        <div class="row">
-            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
-                <div class="card card-signin my-5 ">
-                    <div class="card-body ">
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-                        <h5 class="card-title text-center">Content coming soon!</h5>
-                    </div>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap-4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="javascript/jquery-3.5.1.min.js"></script>
+    <script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
+
+    <!-- Our JavaScript Exception handler-->
+    <script src="javascript/exception_handler.js"></script>
+    <script src="javascript/global_functions.js"></script>
+
+    <!-- Our JavaScript -->
+    <script src="javascript/login_page.js"></script>
+    <!-- Modified Bootstrap CSS -->
+    <link rel="stylesheet" href="css/login.css">
+    <title>Login Page</title>
+    <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
+
+    <!-- NAVIGATION -->
+
+    <nav class="navbar navbar-light fixed-top bg-dark highest1">
+        <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
+            <span class="navbar-toggler-icon"> </span>
+        </button>
+        <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
+        <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
+        <a href="all_events.html" class="nav-link text-warning">All Events</a>
+
+        <div>
+            <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
+            <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link text-white" href="carnival2021.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
+                <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
+                <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
+            </div>
+        </div>
+    </nav>
+</head>
+
+<body>
+
+<!-- EXCEPTION HANDLER -->
+
+<div id="alert" class="alert alert-success alert-dismissible fade show fixed-top d-none" role="alert" >
+    <span id="text">Holy guacamole! </span>
+    <button type="button" class="close" id="close" onclick="close_alert()" >
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+<div class="container" style="margin-top: 100px">
+    <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
+            <div class="card card-signin my-5 ">
+                <div class="card-body ">
+
+                    <h5 class="card-title text-center">Content coming soon!</h5>
                 </div>
             </div>
-
         </div>
-    </div>
-    </body>
 
-    </html>
+    </div>
+</div>
+</body>
+
+</html>
