--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="bootstrap-4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap-4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="javascript/jquery-3.5.1.min.js"></script>
-<script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="javascript/jquery-3.5.1.min.js"></script>
+    <script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
 
-<!-- Our JavaScript Exception handler-->
-<script src="javascript/exception_handler.js"></script>
-<script src="javascript/global_functions.js"></script>
-<!-- Our JavaScript -->
-<script src="javascript/login_page.js"></script>
-<!-- Modified Bootstrap CSS -->
-<link rel="stylesheet" href="css/login.css">
-<title>Login Page</title>
+    <!-- Our JavaScript Exception handler-->
+    <script src="javascript/exception_handler.js"></script>
+    <script src="javascript/global_functions.js"></script>
+
+    <!-- Our JavaScript -->
+    <script src="javascript/login_page.js"></script>
+    <!-- Modified Bootstrap CSS -->
+    <link rel="stylesheet" href="css/login.css">
+    <title>Login Page</title>
+    <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
+
+    <!-- NAVIGATION -->
+
     <nav class="navbar navbar-light fixed-top bg-dark highest1">
-        <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollNavigation()">
+        <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
             <span class="navbar-toggler-icon"> </span>
         </button>
         <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
@@ -37,14 +42,18 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link text-white" href="events_february_xxi.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
+                <a class="nav-item nav-link text-white" href="carnival2021.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
                 <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
                 <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
             </div>
         </div>
     </nav>
 </head>
+
 <body>
+
+<!-- EXCEPTION HANDLER -->
+
 <div id="alert" class="alert alert-success alert-dismissible fade show fixed-top d-none" role="alert" >
     <span id="text">Holy guacamole! </span>
     <button type="button" class="close" id="close" onclick="close_alert()" >
