added images, translated descriptions

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <script src="javascript/jquery-3.5.1.min.js"></script>
     <script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
 
-    <!-- Our JavaScript Exception handler-->
+    <!-- Exception Handler and Global Functions -->
     <script src="javascript/exception_handler.js"></script>
     <script src="javascript/global_functions.js"></script>
 
     <!-- Our JavaScript -->
-    <script src="javascript/login_page.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>Login Page</title>
@@ -43,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href="carnival2021.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
-                <a class="nav-item nav-link text-white" href=#>Chapter 18</a>
+                <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
             </div>
         </div>
