--- a/carnival2021.html
+++ b/carnival2021.html
@@ -211,13 +211,13 @@
                                 <td><b>7. deň</b></td>
                             </tr>
                             <tr>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Postarší sněhulák</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Yeti_Hot_Spring">Yettiho horký pramen</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Elder Snowman</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Yeti_Hot_Spring">Yeti Hot Spring</a></td>
                                 <td>1x portálový bonus (10%)</td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Elven_Wagon">Elfí vůz</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Deers_Golems">Vůz lesních elfů</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Val_Balcony">Balkón Gaelagil</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Halfling_Wagon">Půlčíkovský kočár</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Elven_Wagon">Elven Float</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Deers_Golems">Woodelven Float</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Val_Balcony">Gaelagil's Balcony</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Halfling_Wagon">A Halfling Carriage</a></td>
                             </tr>
                             <tr>
                                 <td><b>8. deň</b></td>
@@ -229,13 +229,13 @@
                                 <td><b>14. deň</b></td>
                             </tr>
                             <tr>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Aureate_Willow">Zlatá vrba</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Dancing_People">Karnevalová choreografie</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Dawn_Of_Spring_Shrine">Svatyně úsvitu jara</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Beauty_Puppet">Vůz Šarmantní princ</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dragon_Puppet">Dračí vůz</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Aureate_Willow">Aureate Willow</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Dancing_People">Carnival Choreography</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Dawn_Of_Spring_Shrine">Dawn of Spring Shrine</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Beauty_Puppet">Prince Charming Float</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dragon_Puppet">Dragon Float</a></td>
                                 <td>1x prapor střelců (10)</td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Orc_Wagon">Orský vůz</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Orc_Wagon">Orcish Float</a></td>
                             </tr>
                             <tr>
                                 <td><b>15. deň</b></td>
@@ -247,13 +247,13 @@
                                 <td><b>21. deň</b></td>
                             </tr>
                             <tr>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Sun_Loop">Sluneční očko</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Sun_Loop">Sun Loop</a></td>
                                 <td>1x prastará vědomost (10)</td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Postarší sněhulák</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Bubble_Mask">Bublinové plavidlo</a></td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Constructs_Wagon">Vůz konstruktů</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Elder Snowman</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Bubble_Mask">A Float of Bubbles</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Constructs_Wagon">Float of the Constructs</a></td>
                                 <td>1x prapor lehkooděnců (10)</td>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dwarven_Wagon">Vůz trpasličího pivovaru</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dwarven_Wagon">Chariot of the Dwarven Brewery</a></td>
                             </tr>
                             <tr>
                                 <td><b>22. deň</b></td>
@@ -265,7 +265,7 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Lifeblood_Cone">Šiška s mízou života</a></td>
+                                <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Lifeblood_Cone">Lifeblood Cone</a></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
