--- a/carnival2021.html
+++ b/carnival2021.html
@@ -213,7 +213,7 @@
                             <tr>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Elder Snowman</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Yeti_Hot_Spring">Yeti Hot Spring</a></td>
-                                <td>1x portálový bonus (10%)</td>
+                                <td>1x portal profit (10%)</td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Elven_Wagon">Elven Float</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Deers_Golems">Woodelven Float</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Val_Balcony">Gaelagil's Balcony</a></td>
@@ -234,7 +234,7 @@
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Dawn_Of_Spring_Shrine">Dawn of Spring Shrine</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Beauty_Puppet">Prince Charming Float</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dragon_Puppet">Dragon Float</a></td>
-                                <td>1x prapor střelců (10)</td>
+                                <td>1x light ranged battalion (10)</td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Orc_Wagon">Orcish Float</a></td>
                             </tr>
                             <tr>
@@ -248,11 +248,11 @@
                             </tr>
                             <tr>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Sun_Loop">Sun Loop</a></td>
-                                <td>1x prastará vědomost (10)</td>
+                                <td>1x ancient knowledge (10)</td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Elder Snowman</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Bubble_Mask">A Float of Bubbles</a></td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Constructs_Wagon">Float of the Constructs</a></td>
-                                <td>1x prapor lehkooděnců (10)</td>
+                                <td>1x light melee battalion (10)</td>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dwarven_Wagon">Chariot of the Dwarven Brewery</a></td>
                             </tr>
                             <tr>
