--- a/carnival2021.html
+++ b/carnival2021.html
@@ -206,20 +206,20 @@
                 <p> <iframe class="center" width="560" height="315.2"
                             src="https://www.youtube.com/embed/AS2XrTrF8PM">
                     </iframe> </p>
-                <h5 id="event_buildings" class="card-title text-center text-title font-weight-bold">..:: Kalendář odměn ::..</h5>
+                <h5 id="event_buildings" class="card-title text-center text-title font-weight-bold">..:: Daily Prizes Calendar ::..</h5>
                 <br>
                 <div style="text-align: center">
                     <div class="bbTable">
                         <table class="table-primary" style="width: 100%">
                             <tbody>
                             <tr>
-                                <td><b>1. deň</b></td>
-                                <td><b>2. deň</b></td>
-                                <td><b>3. deň</b></td>
-                                <td><b>4. deň</b></td>
-                                <td><b>5. deň</b></td>
-                                <td><b>6. deň</b></td>
-                                <td><b>7. deň</b></td>
+                                <td><b>1. day</b></td>
+                                <td><b>2. day</b></td>
+                                <td><b>3. day</b></td>
+                                <td><b>4. day</b></td>
+                                <td><b>5. day</b></td>
+                                <td><b>6. day</b></td>
+                                <td><b>7. day</b></td>
                             </tr>
                             <tr>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Elder_Snowman">Elder Snowman</a></td>
@@ -231,13 +231,13 @@
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Halfling_Wagon">A Halfling Carriage</a></td>
                             </tr>
                             <tr>
-                                <td><b>8. deň</b></td>
-                                <td><b>9. deň</b></td>
-                                <td><b>10. deň</b></td>
-                                <td><b>11. deň</b></td>
-                                <td><b>12. deň</b></td>
-                                <td><b>13. deň</b></td>
-                                <td><b>14. deň</b></td>
+                                <td><b>8. day</b></td>
+                                <td><b>9. day</b></td>
+                                <td><b>10. day</b></td>
+                                <td><b>11. day</b></td>
+                                <td><b>12. day</b></td>
+                                <td><b>13. day</b></td>
+                                <td><b>14. day</b></td>
                             </tr>
                             <tr>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Aureate_Willow">Aureate Willow</a></td>
@@ -249,13 +249,13 @@
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XIX_Orc_Wagon">Orcish Float</a></td>
                             </tr>
                             <tr>
-                                <td><b>15. deň</b></td>
-                                <td><b>16. deň</b></td>
-                                <td><b>17. deň</b></td>
-                                <td><b>18. deň</b></td>
-                                <td><b>19. deň</b></td>
-                                <td><b>20. deň</b></td>
-                                <td><b>21. deň</b></td>
+                                <td><b>15. day</b></td>
+                                <td><b>16. day</b></td>
+                                <td><b>17. day</b></td>
+                                <td><b>18. day</b></td>
+                                <td><b>19. day</b></td>
+                                <td><b>20. day</b></td>
+                                <td><b>21. day</b></td>
                             </tr>
                             <tr>
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_February_XXI_Sun_Loop">Sun Loop</a></td>
@@ -267,7 +267,7 @@
                                 <td><a class="text-link font-weight-bold" href="#A_Evt_Car_XX_Dwarven_Wagon">Chariot of the Dwarven Brewery</a></td>
                             </tr>
                             <tr>
-                                <td><b>22. deň</b></td>
+                                <td><b>22. day</b></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
