--- a/all_buildings.html
+++ b/all_buildings.html
@@ -81,7 +81,7 @@
                     <select id="input_event" class="custom-select" style="width: 50%; margin-bottom: 10px;"  onchange="">
                         <option value="all_events">All</option>
                         <optgroup label="2021">
-                            <option value="march_xxi_">Easter</option>
+                            <option value="march_xxi_" disabled>Easter (available soon)</option>
                             <option value="february_xxi_">Elvarian Carnival</option>
                         </optgroup>
                         <optgroup label="2020">
