added orderBy feature

--- a/admin_page.html
+++ b/admin_page.html
@@ -21,6 +21,8 @@
 
     <!-- Our JavaScript -->
     <script src="javascript/admin_page.js"></script>
+    <script src="database/variousData.js"></script>
+    <script src="database/imagesBuildings.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>Administrator Page</title>
