--- a/all_buildings.html
+++ b/all_buildings.html
@@ -108,7 +108,7 @@
                     <input hidden type="checkbox" id="includeAppearances" name="" value="">
                 </div>
                 <div class="col-sm">
-                    <center><label for="input_production">Select production:</label>
+                    <center><label for="input_production">Filter production:</label>
                     <select id="input_production" class="custom-select" style="width: 50%; margin-bottom: 10px;" onchange="">
                         <option value="all_events">All</option>
                         <option value="only,providedCulture">Culture Only</option>
