--- a/all_buildings.html
+++ b/all_buildings.html
@@ -78,7 +78,7 @@
         <div class="container-thick center bg-skin_dark_background rounded-bottom75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px;">
             <div class="row">
                 <div class="col-sm">
-                    <label for="input_event">Select event:</label>
+                    <label for="input_event">Introduced in event:</label>
                     <select id="input_event" class="custom-select" style="width: 50%; margin-bottom: 10px;"  onchange="">
                         <option value="all_events">All</option>
                         <optgroup label="2021">
