--- a/all_events.html
+++ b/all_events.html
@@ -23,6 +23,7 @@
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
     <script src="javascript/all_events.js"></script>
+    <script src="database/items.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>All Events</title>
