--- a/all_events.html
+++ b/all_events.html
@@ -65,7 +65,7 @@
 
 <div style="padding-top: 59px;">
     <div style="width: 100%;">
-        <div class="container-thick center bg-skin_light_background rounded-bottom75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px;">
+        <div class="container-thick center bg-skin_background rounded-bottom75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 20px; padding-right: 20px;">
             <div class="row">
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
