small changes to all events, added calendar

--- a/admin_page.html
+++ b/admin_page.html
@@ -38,8 +38,8 @@
         <span class="navbar-toggler-icon"> </span>
     </button>
     <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
-    <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
-    <a href="all_events.html" class="nav-link text-warning">All Events</a>
+    <a href="buildings.html" class="nav-link text-warning">All Buildings</a>
+    <a href="events.html" class="nav-link text-warning">All Events</a>
 
     <div>
         <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
