--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <span class="navbar-toggler-icon"> </span>
         </button>
         <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
-        <a href="all_buildings.html" class="nav-link text-warning">All Buildings</a>
-        <a href="all_events.html" class="nav-link text-warning">All Events</a>
+        <a href="buildings.html" class="nav-link text-warning">All Buildings</a>
+        <a href="events.html" class="nav-link text-warning">All Events</a>
 
         <div>
             <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
@@ -70,46 +70,14 @@
     </button>
 </div>
 
-<div class="container" style="margin-top: 100px">
-  <div class="row">
-    <div class="col-sm-9 col-md-10 col-lg-5 mx-auto border-warning">
-      <div class="card card-signing my-5 border-warning">
-        <div class="card-body border-warning">
-
-            index test
+<div class="col-md-7" style="padding-top: 20px; margin-top: 70px;">
+    <div class="panel">
+        <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 600px; overflow-y: scroll;">
+            <div id="column_with_news" class="col-md">
+                <li><strong>Snowman</strong>Soon</li>
+            </div>
         </div>
-      </div>
     </div>
-
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-          <div class="card card-signing my-5 ">
-              <div class="card-body border-warning">
-                <div class="row">
-                    <div class="col-sm-9 col-md-10 col-lg-5 mx-auto border-warning">
-                        <div class="card card-signing my-5 border-warning">
-                            <div class="card-body border-warning">
-
-                                index test
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                  <div class="row">
-                      <div class="col-sm-9 col-md-10 col-lg-5 mx-auto border-warning">
-                          <div class="card card-signing my-5 border-warning">
-                              <div class="card-body border-warning">
-
-                                  index test
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-
-              </div>
-          </div>
-      </div>
-  </div>
 </div>
 </body>
 
