--- a/events.html
+++ b/events.html
@@ -47,7 +47,7 @@
         </button>
         <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
         <a href="buildings.html" class="nav-link text-warning">All Buildings</a>
-        <a href="events.html" class="nav-link text-warning">All Events</a>
+        <a href="events.html" class="nav-link text-warning">&#x203A; All Events &#x2039;</a>
 
         <div>
             <button class="btn btn-default bg-light" style="margin-right:50px;"onclick="log_out()">Log Out</button>
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
-                <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
+                <a class="nav-item nav-link text-white" href="admin.html">Admin page</a>
             </div>
         </div>
     </nav>
@@ -73,7 +73,7 @@
     </button>
 </div>
 
-<div class="highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 50px; margin-top: 300px; margin-left: 0px; position: fixed">
+<div class="highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 50px; margin-top: 274px; margin-left: 0px; position: fixed">
     <div class="justify-content-center box d-flex flex-column" style="height: 100%;"><span class="align-middle"><a class="text-link font-weight-bold" href="#events_top"><img src="images/general/calendar.png" width="45" style="margin-right: 2px; position: relative;">Calendar</a></span></div>
 </div>
 
