--- a/carnival2021.html
+++ b/carnival2021.html
@@ -62,7 +62,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link text-white" href="carnival2021.html"><img src="images/events/february_xxi/currency_big.png" width="32" style="margin-bottom: 5px; margin-right: 5px; position: relative;">Carnival 2021</a>
             <a class="nav-item nav-link text-white" href=#>Soon</a>
-            <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
+            <a class="nav-item nav-link text-white" href="admin.html">Admin page</a>
         </div>
     </div>
 </nav>
