--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
-                <a class="nav-item nav-link text-white" href="admin_page.html">Admin page</a>
+                <a class="nav-item nav-link text-white" href="admin.html">Admin page</a>
             </div>
         </div>
     </nav>
@@ -74,7 +74,7 @@
     <div class="panel">
         <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 600px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
-                <li><strong>Snowman</strong>Soon</li>
+                <li><strong>Snowman</strong> Index page coming soon</li>
             </div>
         </div>
     </div>
