--- a/buildings.html
+++ b/buildings.html
@@ -32,6 +32,7 @@
 
     <!-- Our JavaScript -->
     <script src="javascript/all_buildings.js"></script>
+    <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
