--- a/events.html
+++ b/events.html
@@ -33,6 +33,7 @@
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
     <script src="javascript/all_events.js"></script>
+    <script src="javascript/global_functions.js"></script>
     <script src="database/items.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
