--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
-                <a class="nav-item nav-link text-white" href="admin.html">Admin page</a>
+                <!--<a class="nav-item nav-link text-white" href="admin.html">Admin page</a>-->
             </div>
         </div>
     </nav>
