--- a/events.html
+++ b/events.html
@@ -88,8 +88,8 @@
                             <center><label for="input_event">Select event:</label>
                             <select id="input_event" class="custom-select" style="width: 80%; margin-bottom: 10px;">
                                 <optgroup label="2021">
-                                    <option value="march_xxi_" disabled>Rise of the Phoenix Cult</option>
-                                    <option value="february_xxi_" selected="selected">Elvarian Carnival</option>
+                                    <option value="march_xxi_" selected="selected">Rise of the Phoenix Cult</option>
+                                    <option value="february_xxi_">Elvarian Carnival</option>
                                 </optgroup>
                             </select>
                             </center>
